--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
   },
   "dependencies": {
     "@imengyu/vue3-context-menu": "^1.0.9",
+    "@tiptap/extension-placeholder": "^2.0.0-beta.48",
+    "@tiptap/starter-kit": "^2.0.0-beta.185",
+    "@tiptap/vue-3": "^2.0.0-beta.91",
     "firebase": "^9.8.1",
+    "remixicon": "^2.5.0",
+    "sass": "^1.52.1",
     "vue3-timepicker": "^1.0.0-beta.2"
   }
 }
