--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "@imengyu/vue3-context-menu": "^1.0.9",
+    "@tiptap/extension-highlight": "^2.0.0-beta.33",
     "@tiptap/extension-placeholder": "^2.0.0-beta.48",
+    "@tiptap/extension-task-item": "^2.0.0-beta.32",
+    "@tiptap/extension-task-list": "^2.0.0-beta.26",
     "@tiptap/starter-kit": "^2.0.0-beta.185",
     "@tiptap/vue-3": "^2.0.0-beta.91",
     "firebase": "^9.8.1",
