--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tiptap/extension-task-list": "^2.0.0-beta.26",
     "@tiptap/starter-kit": "^2.0.0-beta.185",
     "@tiptap/vue-3": "^2.0.0-beta.91",
+    "debounce": "^1.2.1",
     "firebase": "^9.8.1",
     "remixicon": "^2.5.0",
     "sass": "^1.52.1",
