--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "@tiptap/extension-text-style": "^2.0.0-beta.23",
     "@tiptap/starter-kit": "^2.0.0-beta.185",
     "@tiptap/vue-3": "^2.0.0-beta.91",
-    "debounce": "^1.2.1",
     "firebase": "^9.8.1",
     "remixicon": "^2.5.0",
     "sass": "^1.52.1",
+    "throttle-debounce": "^5.0.0",
     "vue3-timepicker": "^1.0.0-beta.2"
   }
 }
