--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tiptap/starter-kit": "^2.0.0-beta.185",
     "@tiptap/vue-3": "^2.0.0-beta.91",
     "firebase": "^9.8.1",
+    "google-caja": "0.0.2",
     "remixicon": "^2.5.0",
     "throttle-debounce": "^5.0.0",
     "v-contextmenu": "^3.0.0",
