--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@tiptap/extension-color": "^2.0.0-beta.9",
     "@tiptap/extension-highlight": "^2.0.0-beta.33",
+    "@tiptap/extension-link": "^2.0.0-beta.38",
     "@tiptap/extension-placeholder": "^2.0.0-beta.48",
     "@tiptap/extension-task-item": "^2.0.0-beta.32",
     "@tiptap/extension-task-list": "^2.0.0-beta.26",
